--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start":"node backend/index.js",
-    "dev": "nodemon backend/index.js"
+   "start": "cross-env NODE_ENV=production node backend/index.js",
+    "dev": "NODE_ENV=development nodemon backend/index.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "type": "module",
   "keywords": [],
@@ -23,5 +24,8 @@
     "graphql-passport": "^0.6.8",
     "mongoose": "^8.5.4",
     "passport": "^0.7.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
